syntax = "proto3";
option go_package = "pkg/protocol/pb";
package pb;

import "message.ext.proto";

enum PackageType {
  PT_UNKNOWN = 0 ;          // 未知
  PT_SIGN_IN = 1 ;          // 设备登陆请求
  PT_SYNC = 2 ;             // 消息同步
  PT_HEARTBEAT = 3;         // 心跳
  PT_MESSAGE = 4;           // 消息转发
  PT_SUBSCRIBE_ROOM = 5;    //订阅房间
}

//上行数据
message Input {
  PackageType type = 1; // 包类型
  int64 request_id = 2; //请求id
  bytes data = 3;       //数据
}

//下行数据 
message Output {
  PackageType type =1 ;     //包类型
  int64 request_id = 2;     //请求id
  int32 code = 3;           //错误码
  string message = 4;       //错误信息
  bytes data = 5;           //数据
}

//设备登陆,PackageType:1
message SignInInput{
  int64 device_id = 1;      //设备id
  int64 user_id = 2;        //用户id
  string token = 3;         //秘钥
}

//消息同步请求,PackageType:2
message SyncInput{
  int64 seq = 1;            //客户端已经同步的序列号
}

//消息同步响应,PackageType:2
message SyncOutput{
  repeated Message message = 1; //消息列表
  bool has_more = 2;            //是否有更多数据
}

//心跳检测,PackageType:3
//只需要发空包，不需要定义上下行数据

//消息转发,PackageType:4
//message.ext.proto中的Message

//消息ACK,PackageType:4
//message.ext.proto中的ACK

//订阅房间请求,PackageType:5
message SubscribeRoomInput{
  int64 room_id = 1;            //房间id,如果为0,取消房间订阅
  int64 seq = 2;                //消息序列号
}


